--- a/provisioning/playbook.yml
+++ b/provisioning/playbook.yml
@@ -25,7 +25,7 @@
       with_items:
         - libxml2
         - ca-certificates
-        - dnsmasq
+        # - dnsmasq
         - traceroute
       become: yes
 
